apps/tuwunel/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tuwunel-dev
  labels:
    goldilocks.fairwinds.com/enabled: "true"
